# cf-bsky-bronze

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml
src/bluesky_ingest/: config.py  cursor_from_list.py  extract.py  hash.py  logging.py  main.py  parquet_writer.py  s3.py  s3_status.py
systemd/: bronze-status.service  bronze-status.timer
tests/integration/: test_main_loop.py
tests/unit/: test_cursor_from_list.py  test_extract.py  test_hash.py  test_parquet_writer.py
