[project]
name = "bluesky-ingest"
version = "0.1.0"
description = "Bluesky Jetstream → S3 bronze parquet writer."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "orjson>=3.10",
    "pyarrow>=17",
    "structlog>=24",
    "websockets>=13",
    "xxhash>=3.5",
]

[project.scripts]
bluesky-ingest = "bluesky_ingest.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bluesky_ingest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "moto[s3]>=5",
]
